# rust-rock-paper-scissors-hand

./: README.md  hand_test.py
esp32-robohand/: Cargo.toml
esp32-robohand/src/: main.rs
stm32-servo/: Cargo.toml  memory.x
stm32-servo/.cargo/: config.toml
stm32-servo/src/: main.rs
