[package]
name = "stm32-servo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stm32-servo"
harness = false

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = [
    "stm32u545re",
    "time-driver-any",
    "memory-x",
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "tick-hz-32_768",
    "defmt",
] }
defmt        = "0.3"
defmt-rtt    = "0.4"
panic-probe  = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt  = "0.7"
embedded-hal = "0.2" 


ssd1306 = "0.8"
embedded-graphics = "0.8"


[profile.release]
debug = 2
opt-level = "s"